2008-03-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FileDialog.cs: Don't add any ColumnHeader to Columns if view is not
	Details - This is needed after we added the bits to use any available
	column also for List and SmallIcon view. 

2008-03-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: Fire SelectedIndexChanged and SelectedValueChanged events
	at the proper place, not only when changing SelectedIndex and changing
	the selection using keys/mouse, as .net does.

2008-03-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ControlBindingsCollection.cs: Implement last 2.0
	DefaultDataSourceUpdateMode property. Also fix a wrong instruction
	in the new 2.0 Add methods.

2008-03-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: When calling SelectedIndexCollection.Clear,
	return if no items are previously selected - this is done to avoid 
	firing OnSelectedIndexChanged without need to do so. Also,
	when creating handle ensure that the focused item is visible (as
	.net does).

2008-03-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: Rewrote/refactored most of selection code. We require
	the following things in selection: a) keep selection sorted (both
	indices and items), b) SelectedIndices automatically detect the
	selection mode, c) SelectedIndex should be the first selected item
	index, d) Need to Focus/adjust scroll bar when selecting a new item,
	not only for SelectedIndex, which is specially important in Multi*
	selection modes. To achieve this we are moving the selection core to
	SelectedIndexCollection and make depend all selection modifications on
	it.
	Fixes #366438.

2008-03-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Enable implicit mnemonics for drop down
	menu strips.  [Fixes part of bug #367692]

2008-03-06  Jonathan Pobst  <monkey@jpobst.com>

	corcompare - fix parameter names [stragglers].
	Binding.cs, BindingsCollection.cs, GridColumnStylesCollection.cs,